--- a/pages/about/about.wxss
+++ b/pages/about/about.wxss
@@ -1,1 +1,18 @@
 /* pages/about/about.wxss */
+page{
+  background-color: rgb(229, 229, 229);
+}
+
+
+.content{
+  background-color: white;
+  font-size: 16px;
+  padding: 15px;
+  color: black;
+}
+
+.about{
+  font-size: 18px;
+  color: black;
+  padding-left: 15px;
+}
